# tiny-timer

./: .clang-format  README.md  meson.build
res/: resource32.rc  resource64.rc  timer32.manifest  timer64.manifest
src/: timer.c
